Create listModel that creates and stores new notes

--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
 
 <body>
     <script type="text/javascript" src="js/noteModel.js"></script>
+    <script type="text/javascript" src="js/listModel.js"></script>
     <script type="text/javascript" src="test/testLibrary.js"></script>
     <script type="text/javascript" src="spec/noteSpec.js"></script>
+    <script type="text/javascript" src="spec/listSpec.js"></script>
 </body>
 
 </html>
