--- a/index.html
+++ b/index.html
@@ -7,11 +7,15 @@
 </head>
 
 <body>
+    <ul id="list"></ul>
+
     <script type="text/javascript" src="js/noteModel.js"></script>
     <script type="text/javascript" src="js/listModel.js"></script>
+    <script type="text/javascript" src="js/listView.js"></script>
     <script type="text/javascript" src="test/testLibrary.js"></script>
-    <script type="text/javascript" src="spec/noteSpec.js"></script>
-    <script type="text/javascript" src="spec/listSpec.js"></script>
+    <script type="text/javascript" src="spec/noteModelSpec.js"></script>
+    <script type="text/javascript" src="spec/listModelSpec.js"></script>
+    <script type="text/javascript" src="spec/listViewSpec.js"></script>
 </body>
 
 </html>
