Add heading to index.html

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 
 <body>
+    <h1>Notes</h1>
     <ul id="list"></ul>
 
     <script type="text/javascript" src="js/noteModel.js"></script>
