Create Controller with showList method

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <h1>Notes</h1>
     <ul id="list"></ul>
 
+    <script type="text/javascript" src="js/controller.js"></script>
     <script type="text/javascript" src="js/noteModel.js"></script>
     <script type="text/javascript" src="js/listModel.js"></script>
     <script type="text/javascript" src="js/listView.js"></script>
@@ -17,6 +18,7 @@
     <script type="text/javascript" src="spec/noteModelSpec.js"></script>
     <script type="text/javascript" src="spec/listModelSpec.js"></script>
     <script type="text/javascript" src="spec/listViewSpec.js"></script>
+    <script type="text/javascript" src="spec/controllerSpec.js"></script>
 </body>
 
 </html>
