--- a/index.html
+++ b/index.html
@@ -9,13 +9,17 @@
 <body>
     <h1>Notes</h1>
     <ul id="list"></ul>
+    <div id="note"></div>
 
-    <script type="text/javascript" src="js/controller.js"></script>
+    
     <script type="text/javascript" src="js/noteModel.js"></script>
     <script type="text/javascript" src="js/listModel.js"></script>
+    <script type="text/javascript" src="js/noteView.js"></script>
     <script type="text/javascript" src="js/listView.js"></script>
+    <script type="text/javascript" src="js/controller.js"></script>
     <script type="text/javascript" src="test/testLibrary.js"></script>
     <script type="text/javascript" src="spec/noteModelSpec.js"></script>
+    <script type="text/javascript" src="spec/noteViewSpec.js"></script>
     <script type="text/javascript" src="spec/listModelSpec.js"></script>
     <script type="text/javascript" src="spec/listViewSpec.js"></script>
     <script type="text/javascript" src="spec/controllerSpec.js"></script>
