Controller subscribes to new note callback from View

--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
 
 <body>
     <h1>Notes</h1>
+    <div id="root"></div>
+
+    <form>
+        <textarea id="new_note_text" rows="3" cols="50" placeholder="New note&hellip;"></textarea><br/>
+        <input id="create_note_btn" type="submit" value="Create note" />
+    </form>
     <ul id="list"></ul>
     <div id="note"></div>
 
