Only run tests if query string has test in it

--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
     <script type="text/javascript" src="js/noteView.js"></script>
     <script type="text/javascript" src="js/listView.js"></script>
     <script type="text/javascript" src="js/controller.js"></script>
+    <script type="text/javascript" src="js/index.js"></script>
+
     <script type="text/javascript" src="test/testLibrary.js"></script>
     <script type="text/javascript" src="spec/noteModelSpec.js"></script>
     <script type="text/javascript" src="spec/listModelSpec.js"></script>
