Reorganize js files into subfolders

--- a/index.html
+++ b/index.html
@@ -10,10 +10,11 @@
     <h1>Notes</h1>
     <div id="root"></div>
 
-    <script type="text/javascript" src="js/noteModel.js"></script>
-    <script type="text/javascript" src="js/listModel.js"></script>
-    <script type="text/javascript" src="js/noteView.js"></script>
-    <script type="text/javascript" src="js/listView.js"></script>
+    <script type="text/javascript" src="js/models/noteModel.js"></script>
+    <script type="text/javascript" src="js/models/listModel.js"></script>
+    <script type="text/javascript" src="js/views/noteView.js"></script>
+    <script type="text/javascript" src="js/views/listView.js"></script>
+    <script type="text/javascript" src="js/hashChangeListener.js"></script>
     <script type="text/javascript" src="js/controller.js"></script>
     <script type="text/javascript" src="js/index.js"></script>
 
@@ -22,6 +23,7 @@
     <script type="text/javascript" src="spec/listModelSpec.js"></script>
     <script type="text/javascript" src="spec/noteViewSpec.js"></script>
     <script type="text/javascript" src="spec/listViewSpec.js"></script>
+    <script type="text/javascript" src="spec/hashChangeListenerSpec.js"></script>
     <script type="text/javascript" src="spec/controllerSpec.js"></script>
 </body>
 
